CHANGES TO REMIND

* Version 3.0 Patch 21

+ MINOR ENHANCEMENTS

- Decreased the size of the GIF images in www/.  The largest moon image is
  now 141 bytes instead of 957 bytes.

* Version 3.0 Patch 20

+ NEWS

- I have started a company, Roaring Penguin Software
  Inc. (http://www.roaringpenguin.com) and it now holds the Remind copyright.

+ LICENSE CHANGE

- Remind is now distributed under the pure GPL.  See the file WINDOWS for my
  feelings about a Windows port, however.

+ MINOR ENHANCEMENTS

- Made TkRemind adjust for really low-resolution displays if necessary.

- Added more print options to TkRemind, courtesy of Niels Kristian Bech Jensen.

- Added Spanish language support, courtesy of Rafa Couto.

+ BUG FIXES

- Changed copyright notices to Roaring Penguin Software Inc.

- Rem2PS was passing specials like HTML, etc. in PostScript output.
  YECH!  Fix courtesty of Derek J. Decker.

- Fixed a typo in danish.h, courtesy of  Niels Kristian Bech Jensen.

* Version 3.0 Patch 19

+ MAJOR ENHANCEMENTS

- Added MOON and SHADE specials.  These now work with PostScript,
  HTML and Tcl/Tk front-ends.  You can have cute moons and shaded
  boxes on your printer, on your screen and in your web browser. :-)

- TkRemind overhauled -- you can now edit and delete reminders from
  the GUI.  You can actually reasonably use Remind without learning
  the scripting language.

- TkRemind overhauled -- "server mode" added to Remind; TkRemind will
  now pop up timed reminders.

+ MINOR ENHANCEMENTS

- Updated romanian.h, courtesy Liviu Daia.

+ BUG FIXES

- Allowed object files to be built in different directory from
  source files (thanks to Jonathan Kamens <jik@American.COM>

- Removed restriction against reading group-writable files.  This
  caused headaches on Red Hat Linux which uses an unusual user/group
  scheme.

- Remind would not compile if a non-English language was selected.

- Fixed free() of a NULL pointer.

- Made tkremind display a helpful error message if Remind's